# agent-basic-2026

./: .env.example  .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/config/: logger.py  settings.py
src/app/core/: exceptions.py
tests/: test_health.py
