[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "leonardorsolar",email = "leonardosolar@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "structlog (>=26.1.0,<27.0.0)",
    "openai (>=2.46.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.22,<0.16.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
